ec2.tf

resource "aws_instance" "myInstance" {
  ami           = var.ami
  instance_type = "t2.micro"
  subnet_id     = aws_subnet.main.id
  security_groups = [aws_security_group.allow_inbound_http.id , aws_security_group.allow_outbound_traffic.id]
  user_data     = <<-EOF
                  #!/bin/bash
                  sudo su
                  yum -y install httpd
                  echo "<p> My Instance! </p>" >> /var/www/html/index.html
                  sudo systemctl enable httpd
                  sudo systemctl start httpd
                  EOF
  tags = {
      Name = "myInstance"
  }
}
